--- a/themes/academic/assets/scss/academic/_content.scss
+++ b/themes/academic/assets/scss/academic/_content.scss
@@ -8,7 +8,7 @@
 
 .navtab-position{
   top: 70px;
-  text-align: right;
+  text-align: center;
 }
 
 .article-container-nav
@@ -16,7 +16,7 @@
   max-width: 760px;
   padding: 0 20px 0 20px;
   margin: 0 auto 0 auto;
-  display: flex;
+  // display: flex;
 }
 
 article {
